Adds CORS config and token as cookie implementation
