# docs/swagger.json
@@ -26,7 +26,7 @@
         },
         "/login": {
             "post": {
-                "description": "Logs in a user by identifier (username or email) and password, and returns a JWT token if successful.",
+                "description": "Logs in a user by identifier (username or email) and password, sets a cookie with a JWT token if successful, and returns the JWT token in the response.",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -36,7 +36,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "User login",
+                "summary": "User login and set cookie",
                 "parameters": [
                     {
                         "type": "string",
@@ -54,14 +54,20 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "JWT Token",
-                        "schema": {
-                            "type": "string"
-                        }
+                    "204": {
+                        "description": "Successfully logged in"
                     },
                     "400": {
                         "description": "Missing required field(s) or bad request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
