# internal/api/userhandlers.go
@@ -4,7 +4,9 @@ import (
 	b64 "encoding/base64"
 	"encoding/json"
 	"go-demo-api/internal/db"
+	user "go-demo-api/internal/db/user"
 	"net/http"
+	"time"
 )
 
 type APIUser struct {
@@ -96,16 +98,17 @@ func (h *VerificationHandler) VerifyUser(w http.ResponseWriter, r *http.Request)
 	w.Write([]byte("User verified successfully"))
 }
 
-// LoginUser logs in a user and returns a JWT token
-// @Summary User login
-// @Description Logs in a user by identifier (username or email) and password, and returns a JWT token if successful.
+// LoginUser logs in a user, sets a cookie with a JWT token, and returns the token in the response
+// @Summary User login and set cookie
+// @Description Logs in a user by identifier (username or email) and password, sets a cookie with a JWT token if successful, and returns the JWT token in the response.
 // @Tags users
 // @Accept multipart/form-data
 // @Produce json
 // @Param identifier formData string true "Username or Email"
 // @Param password formData string true "Password"
-// @Success 200 {string} string "JWT Token"
+// @Success 204 "Successfully logged in"
 // @Failure 400 {object} map[string]string "Missing required field(s) or bad request"
+// @Failure 404 {object} map[string]string "User not found"
 // @Failure 500 {object} map[string]string "Internal Server Error"
 // @Router /login [post]
 func (h *UserHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
@@ -127,10 +130,27 @@ func (h *UserHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 
 	token, err := h.Repo.LoginUser(identifier, password)
 	if err != nil {
+		if err == user.UserRepo_NotFoundError {
+			http.Error(w, "User not found", http.StatusNotFound)
+			return
+		}
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
-	w.WriteHeader(http.StatusOK)
-	w.Write([]byte(token))
+	// Create a cookie
+	expiration := time.Now().Add(24 * time.Hour) // Set expiration to 24 hours from now
+	cookie := http.Cookie{
+		Name:     "token",    // Name of the cookie
+		Value:    token,      // Token value
+		Expires:  expiration, // Expiration time
+		HttpOnly: true,       // Make the cookie HTTP-only (not accessible via JavaScript)
+		Path:     "/",        // Cookie path
+		// Secure:   true,     // Uncomment this if you are serving your site over HTTPS
+	}
+
+	// Set the cookie in the response header
+	http.SetCookie(w, &cookie)
+
+	w.WriteHeader(http.StatusNoContent)
 }
